# SciCalc-Pro

./: .gitignore  GUIA.md  PRD.md  docker-compose.yml  sonar-project.properties
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  run.py
backend/src/: main.py
backend/src/application/dtos/: calculation_request.py  calculation_response.py
backend/src/application/use_cases/: evaluate_expression.py  manage_favorite_conversions.py  manage_history.py  manage_preferences.py  manage_profile.py  manage_session.py  manage_user.py
backend/src/application/validators/: regex_validators.py
backend/src/domain/engine/: evaluator.py  lexer.py  parser.py  tokens.py
backend/src/domain/entities/: calculation.py  profile.py  user.py
backend/src/domain/exceptions/: domain_exceptions.py
backend/src/domain/value_objects/: angle_mode.py  expression.py  precision.py
backend/src/infrastructure/persistence/: database.py
backend/src/infrastructure/security/: jwt_handler.py
backend/tests/: conftest.py
backend/tests/e2e/: conftest.py  selenium_main.py  test_auth_e2e.py  test_calculator_e2e.py  test_web_pages.py
backend/tests/integration/: conftest.py  test_auth_api.py  test_calculate_api.py  test_favorites_api.py  test_health_web.py  test_history_api.py  test_preferences_api.py  test_profile_api.py  test_session_api.py
backend/tests/unit/: test_arithmetic.py  test_audit_log.py  test_history_crud.py  test_jwt_auth.py  test_regex_validators.py  test_session_management.py  test_trig_deg.py  test_trig_rad.py  test_use_cases.py  test_value_objects.py
(+45 files in other folders)
